--- a/mlo-client/src/main/resources/default.mlo-client.properties
+++ b/mlo-client/src/main/resources/default.mlo-client.properties
@@ -9,7 +9,7 @@ mlo.client.config.debug.clients=debugClient
 mlo.client.config.server.baseUri=http://127.0.0.1:8080/DEMO
 mlo.client.config.server.connectionTimeoutSec=600
 mlo.client.config.server.readTimeoutSec=600
-mlo.client.config.server.src.componentName=mloClient
-#mlo.client.config.server.src.componentName=demoApl
+#mlo.client.config.server.src.componentName=mloClient
+mlo.client.config.server.src.componentName=developer
 mlo.client.config.server.dummy.invoker.flag=false
 mlo.client.config.server.topologyViewUri=
